--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,9 @@ body {
   justify-content: center;
   gap: 20px;
   align-items: flex-start;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Montserrat", sans-serif;
+  color: rgb(59, 59, 59);
+  overflow: hidden;
 }
 
 .game-field {
@@ -32,15 +33,11 @@ body {
 
 .tile {
   position: absolute;
-  width: 15vmin;
-  height: 15vmin;
+  font-weight: 600;
   border-radius: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #000;
-
-  font-size: 38px;
   transition: 0.1s ease;
   animation: Appear 0.1s 0.1s ease forwards;
   opacity: 0;
@@ -58,12 +55,12 @@ body {
 }
 
 .score {
-  font-size: 42px;
+  font-size: 4vmin;
   font-weight: 600;
 }
 
 .max-tile {
-  font-size: 32px;
+  font-size: 3vmin;
   font-weight: 500;
 }
 
@@ -73,9 +70,11 @@ body {
   justify-self: center;
   border-radius: 5px;
   border: none;
-  font-size: 24px;
+  font-size: 3vmin;
   transition: 0.3s ease;
   outline: none;
+  font-weight: 800;
+  color: rgb(59, 59, 59);
 }
 
 .start-btn:hover {
@@ -96,6 +95,31 @@ body {
   100% {
     opacity: 1;
     transform: scale(100%);
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .table {
+    border: 5px solid rgb(141, 141, 141);
+  }
+
+  .game-field {
+    grid-gap: 5px;
+    padding: 5px;
+    grid-template-columns: repeat(4, 20vmin);
+    grid-template-rows: repeat(4, 20vmin);
+  }
+
+  .score {
+    font-size: 5vmin;
+  }
+
+  .max-tile {
+    font-size: 5vmin;
+  }
+
+  .start-btn {
+    font-size: 5vmin;
   }
 }
 
